2017-09-20  Bruno Haible  <bruno@clisp.org>

	Retrieve the CLHS symbol map in one step, in most cases.
	* clhs.lisp (ensure-clhs-map): Use the domain name as a guidance which
	map file name to try.

2017-09-19  Bruno Haible  <bruno@clisp.org>

	Avoid build failure in clx/new-clx module in WIDE_SOFT model.
	Reported and fix proposed by Sébastien Villemot in
	<https://sourceforge.net/p/clisp/patches/51/>.
	The cause is that export_def is not 100% hygienic: It outputs a
	definition with all occurring macros pre-expanded. Therefore the macro
	argument names must be different from all identifiers that may be
	pulled in by macro expansion of the occurring macros.
	* lispbibl.d (cstombs_help_): Rename argument 'A' to 'asserter'.
	(with_string_0_help_, with_sstring_0_help_): Rename argument 'A' to
	'asserter', 'NR' to 'notreached'.
	(unpack_sstring_alloca_help_): Rename argument 'u' to 'notreached'.

2017-09-10  Bruno Haible  <bruno@clisp.org>

	Use newest libffcall.
	* m4/ffcall.m4 (CL_LIBFFCALL_DOWNLOAD_URL): Point to the libffcall-2.0
	release.
	(CL_FFCALL): Try to link first with -lffcall, before falling back to
	linking with -lavcall -lcallback. Correct indentation.
	* aclocal.m4, src/configure: Regenerated.

2017-08-24  Bruno Haible  <bruno@clisp.org>

	Remove the need to pass --with-libsigsegv-prefix when passing --prefix.
	Likewise for --with-libffcall-prefix.
	This helps at least on Linux/powerpc64 (CentOS 7).
	* configure (explicit_prefix): New variable.
	(note_prefix): New function. Invoke it when a --prefix option is seen.
	(have_explicit_libsigsegv_args, have_explicit_libffcall_args): New
	variables. Use them to know whether to augment subdir_configure_args.
	
2017-08-24  Bruno Haible  <bruno@clisp.org>

	Improve support for portability testing.
	The function mymalloc had code for checking the result of malloc(),
	but this check was a no-op in the interesting cases (e.g. with
	SINGLEMAP_MEMORY), and additionally it remained silent.