@@ -1,5 +1,12 @@
 2017-09-20  Bruno Haible  <bruno@clisp.org>
 
+	Remove unused code.
+	* clhs.lisp (read-from-file): Remove function.
+	(start-message): Move from here...
+	* modules/libsvm/libsvm.lisp (start-message): ... to here.
+
+2017-09-20  Bruno Haible  <bruno@clisp.org>
+
 	Retrieve the CLHS symbol map in one step, in most cases.
 	* clhs.lisp (ensure-clhs-map): Use the domain name as a guidance which
 	map file name to try.
@@ -17140,7 +17147,7 @@
 
 2006-10-10  Sam Steingold  <sds@podval.org>
 
-	* clhs.lisp (start-mesasge): helper extracted from read-from-file
+	* clhs.lisp (start-message): helper extracted from read-from-file
 	(read-from-file): use it
 	* modules/libsvm/libsvm.lisp (load-problem, save-problem): ditto
 
